Update to 1.18.2
Noable changes: TagCollectionArgument is now replaced by a RegistryArgument with a suggestion provider
Most cases taking tags now take TagKey