@@ -7,11 +7,11 @@ import com.google.gson.JsonSyntaxException;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.NoArgsConstructor;
+import net.minecraft.core.Holder;
 import net.minecraft.core.Registry;
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.SerializationTags;
-import net.minecraft.tags.Tag;
+import net.minecraft.tags.TagKey;
 import net.minecraft.util.GsonHelper;
 import net.minecraft.world.level.material.Fluid;
 import net.minecraft.world.level.material.Fluids;
@@ -25,6 +25,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @SuppressWarnings("unused")
 public abstract class FluidIngredient {
@@ -127,7 +128,7 @@ public abstract class FluidIngredient {
    * @param amount  Minimum fluid amount
    * @return  Fluid ingredient from a tag
    */
-  public static FluidIngredient of(Tag<Fluid> fluid, int amount) {
+  public static FluidIngredient of(TagKey<Fluid> fluid, int amount) {
     return new FluidIngredient.TagMatch(fluid, amount);
   }
 
@@ -327,12 +328,12 @@ public abstract class FluidIngredient {
    */
   @AllArgsConstructor(access=AccessLevel.PRIVATE)
   private static class TagMatch extends FluidIngredient {
-    private final Tag<Fluid> tag;
+    private final TagKey<Fluid> tag;
     private final int amount;
 
     @Override
     public boolean test(Fluid fluid) {
-      return tag.contains(fluid);
+      return fluid.is(tag);
     }
 
     @Override
@@ -342,13 +343,16 @@ public abstract class FluidIngredient {
 
     @Override
     public List<FluidStack> getAllFluids() {
-      return tag.getValues().stream().map((fluid) -> new FluidStack(fluid, amount)).collect(Collectors.toList());
+      return StreamSupport.stream(Registry.FLUID.getTagOrEmpty(tag).spliterator(), false)
+                          .filter(Holder::isBound)
+                          .map(fluid -> new FluidStack(fluid.value(), amount))
+                          .toList();
     }
 
     @Override
     public JsonElement serialize() {
       JsonObject object = new JsonObject();
-      object.addProperty("tag", SerializationTags.getInstance().getIdOrThrow(Registry.FLUID_REGISTRY, this.tag, () -> new IllegalStateException("Unregistered fluid tag " + tag)).toString());
+      object.addProperty("tag", this.tag.location().toString());
       object.addProperty("amount", amount);
       return object;
     }
@@ -359,8 +363,7 @@ public abstract class FluidIngredient {
      * @return Fluid ingredient instance
      */
     private static TagMatch deserialize(JsonObject json) {
-      String tagName = GsonHelper.getAsString(json, "tag");
-      Tag<Fluid> tag = SerializationTags.getInstance().getTagOrThrow(Registry.FLUID_REGISTRY, new ResourceLocation(tagName), n -> new JsonSyntaxException("Unknown fluid tag '" + n + "'"));
+      TagKey<Fluid> tag = TagKey.create(Registry.FLUID_REGISTRY, JsonHelper.getResourceLocation(json, "tag"));
       int amount = GsonHelper.getAsInt(json, "amount");
       return new TagMatch(tag, amount);
     }
